﻿﻿
TypoMCE 4.4.4
====================================
- Forked and renamed to "TypoMCE"
- Upgrade TinyMCE to 3.5.8
- Added plugin "typograf"
- Made Ctrl+S works



TinyMCE 4.3.3
====================================
- Change popup windows to more convenient modals
- Update TinyMCE to 3.5.4.1

TinyMCE 4.3.2
====================================
- Update Czech/German translation
- [#74] Fix inclusion of english as fallback for language
- [#80] Make context menu use MODxLink plugin
- Upgrade TinyMCE to 3.4.7

TinyMCE 4.3.1
====================================
- MODX 2.2 compatibility fixes

TinyMCE 4.3.0
====================================
- [#70] Fixes to cirkuit skin with missing CSS styles
- [#71] Update TinyMCE to v3.4.5
- [#64] Add tiny.template_list_snippet setting for grabbing template list from a Snippet
- [#66] Fix issues with Revolution 2.2.0 code
- [#63] Add tiny.base_url setting for managing the document_base_url tinymce setting

TinyMCE 4.2.4
====================================
- Updated TinyMCE to 3.4.2
- Fix issue where recursion detected xPDO error was showing in logs on chunk editing
- [#55] Fix help for element_format and preformatted descriptions in plugin properties
- [#53] Languages added/update: German, English, French, Indonesian, Japanese, Dutch, Russian, Ukrainian

TinyMCE 4.2.2
====================================
- [#49] Added spellchecker files

TinyMCE 4.2.1
====================================
- [#45] [#47] Fixes for front-end usage and compatibility with NewsPublisher
- Add compressed JS for faster loading

TinyMCE 4.2.0
====================================
- [#44] Fix issue with invalid forced_root_block value that causes TinyMCE to hang on empty resources
- [#42] Fix issue with passed-in values that caused TinyMCE to not load correctly
- Update TinyMCE to 3.3.9.3
- [#21] Add a bunch of system settings for controlling TinyMCE output and cleanup
- [#41] Add tiny.forced_root_block setting